Fix quote alignment

--- a/source/stylesheets/style.css.less
+++ b/source/stylesheets/style.css.less
@@ -43,6 +43,8 @@
 		padding: 10px 0px;
 
 		blockquote {
+			margin: 0;
+			padding: 0;
 			border-left: 0;
 			p { text-indent: -.4em; }
 			cite { font-style: italic; }
